<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">


    <!--android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        -->


        <ImageView
            android:id="@+id/logo"
            android:layout_width="102dp"
            android:layout_height="76dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="153dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/group_18" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="274dp"
            android:layout_height="164dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/manrope"
            android:text="@string/welcome"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/act2"
            android:layout_width="171dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/purple"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/manrope"
            android:text="@string/start"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:contextClickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/act2"
            app:layout_constraintEnd_toEndOf="@+id/act2"
            app:layout_constraintTop_toTopOf="@+id/act2"
            app:srcCompat="@drawable/vector_3"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>



