<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="90dp"
    >
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="404dp"

        >


    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="404dp"

        >

        <TextView
            android:id="@+id/welcome2"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/manrope"
            android:text="@string/auth_en"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/ready2"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/pink"
            android:contentDescription="@string/app_name"
            android:fontFamily="@font/manrope"
            android:text="@string/auth"
            android:textAlignment="center"
            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eT2" />

        <EditText
            android:id="@+id/eT1"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:background="@drawable/rectangle_10"
            android:backgroundTint="@color/psw"
            android:backgroundTintMode="multiply"

            android:ems="10"
            android:fontFamily="@font/manrope"
            android:hint="@string/login"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:textAlignment="textStart"
            android:textColorHint="@color/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome2"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/eT2"
            android:layout_width="299dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/rectangle_10"
            android:backgroundTint="@color/psw"
            android:backgroundTintMode="multiply"
            android:ems="10"
            android:fontFamily="@font/manrope"
            android:hint="@string/psw"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:paddingStart="10dp"


            android:paddingEnd="10dp"
            android:textAlignment="textStart"
            android:textColorHint="@color/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eT1"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>